--- a/app/src/main/res/layout/activity_add_new_entry.xml
+++ b/app/src/main/res/layout/activity_add_new_entry.xml
@@ -23,6 +23,14 @@
         android:layout_margin="10dp"
         android:src="@drawable/photo_camera" />
 
+    <ImageView
+        android:id="@+id/image_view_MiniGallery"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/linear_layout_DamagesRadioGroups"
+        android:layout_margin="10dp"
+        android:layout_toRightOf="@id/image_button_AttachPhoto" />
+
     <include
         android:id="@+id/linear_layout_DamagesRadioGroups"
         layout="@layout/content_damage_radio_buttons"
