--- a/app/src/main/res/layout/cell_gallery_photo.xml
+++ b/app/src/main/res/layout/cell_gallery_photo.xml
@@ -5,10 +5,10 @@
     android:orientation="vertical"
     android:padding="5dp">
 
-    <ImageView
+    <ImageButton
         android:id="@+id/image_view_cell_item"
-        android:layout_width="200px"
-        android:layout_height="200px"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
         android:scaleType="fitXY" />
 
 </LinearLayout>
