--- a/app/src/main/res/layout/header_long_lat.xml
+++ b/app/src/main/res/layout/header_long_lat.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/text_view_CurrentLongitude"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="3dp"
-        android:text="Longitude: "
+        android:layout_weight="1"
+        android:text="@string/header_longitude"
         android:textSize="14sp" />
 
     <TextView
@@ -17,7 +19,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/text_view_CurrentLongitude"
         android:layout_margin="3dp"
-        android:text="Latitude: "
+        android:layout_weight="1"
+        android:text="@string/header_latitude"
         android:textSize="14sp" />
 
-</RelativeLayout>
+</LinearLayout>
