--- a/app/src/main/res/layout/content_envelope_damages.xml
+++ b/app/src/main/res/layout/content_envelope_damages.xml
@@ -10,11 +10,12 @@
         android:orientation="horizontal">
 
         <EditText
+            android:id="@+id/edit_text_RoofDamage"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:inputType="none"
-            android:text="Roof Damage"
+            android:text="@string/roof_damage"
             android:textAlignment="center"
             android:textSize="24sp" />
 
@@ -32,11 +33,12 @@
         android:orientation="horizontal">
 
         <EditText
+            android:id="@+id/edit_text_WindowsDamage"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:inputType="none"
-            android:text="Windows Damage"
+            android:text="@string/windows_damage"
             android:textAlignment="center"
             android:textSize="24sp" />
 
@@ -54,11 +56,12 @@
         android:orientation="horizontal">
 
         <EditText
+            android:id="@+id/edit_text_WallsDamage"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:inputType="none"
-            android:text="Walls Damage"
+            android:text="@string/walls_damage"
             android:textAlignment="center"
             android:textSize="24sp" />
 
