--- a/app/src/main/res/layout/activity_envelope_damage.xml
+++ b/app/src/main/res/layout/activity_envelope_damage.xml
@@ -18,6 +18,12 @@
         android:layout_height="wrap_content">
 
         <RadioButton
+            android:id="@+id/radio_button_damageNone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="none" />
+
+        <RadioButton
             android:id="@+id/radio_button_damageMinimal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -34,6 +40,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="severe" />
+
+        <RadioButton
+            android:id="@+id/radio_button_damageTotal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="total" />
 
     </RadioGroup>
 
