--- a/app/src/main/res/layout/row_entry.xml
+++ b/app/src/main/res/layout/row_entry.xml
@@ -2,13 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal">
-
-    <TextView
-        android:id="@+id/text_view_EntryID"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAlignment="center" />
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/text_view_EntryDate"
@@ -17,7 +11,37 @@
         android:textAlignment="center" />
 
     <TextView
-        android:id="@+id/text_view_EntryDOD"
+        android:id="@+id/text_view_EntryRoofDmg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAlignment="center" />
+
+    <TextView
+        android:id="@+id/text_view_EntryWindowsDmg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAlignment="center" />
+
+    <TextView
+        android:id="@+id/text_view_EntryWallsDmg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAlignment="center" />
+
+    <TextView
+        android:id="@+id/text_view_EntryLowerBoundWind"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAlignment="center" />
+
+    <TextView
+        android:id="@+id/text_view_EntryMeanWind"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAlignment="center" />
+
+    <TextView
+        android:id="@+id/text_view_EntryUpperBoundWind"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAlignment="center" />
